--- a/language/en-GB/en-GB.plg_system_phocaopengraph.ini
+++ b/language/en-GB/en-GB.plg_system_phocaopengraph.ini
@@ -8,7 +8,21 @@
 ;
 ; @test utf-8 ä, ö, ü
 ;
-
+;
+;[3.0.7]
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE="Image type"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_IMAGE="Static image"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE="Generate"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_IMAGE_IMAGE_LABEL="Image"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_LABEL="Where to store the cache"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_IMAGES_LABEL="In images"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_CACHE_LABEL="In cache"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_IMAGE_LABEL="Background image"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_BACKGROUND_LABEL="Background for text"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_COLOR_LABEL="Color for text"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT_SIZE_LABEL="Font size"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_MARGIN_LABEL="Margin"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_PADDING_LABEL="Padding"
 ;[3.0.6]
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_ENABLE_ARTICLE_COMPONENT_CATEGORIES_VIEW_LABEL="Enable In Article Component (Categories View)"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_ENABLE_ARTICLE_COMPONENT_CATEGORIES_VIEW_DESC="Enable or disable this plugin in Article component (com_content) - in Categories view."
