fix, add lang ru

--- a/language/en-GB/en-GB.plg_system_phocaopengraph.ini
+++ b/language/en-GB/en-GB.plg_system_phocaopengraph.ini
@@ -10,19 +10,31 @@
 ;
 ;
 ;[3.0.7]
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGEFIXSIZE_LABEL="Fix size image"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGEFIXSIZE_WIDTH_IMAGE_LABEL="Width"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGEFIXSIZE_HEIGHT_IMAGE_LABEL="height"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE="Image type"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_IMAGE="Static image"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE="Generate"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_IMAGE_IMAGE_LABEL="Image"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_LABEL="Where to store the cache"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_IMAGES_LABEL="In images"
-PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_CACHE_LABEL="In cache"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_CACHE_CACHE_LABEL="In cache Joomla!"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR_LABEL="Image for error"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_IMAGE_LABEL="Background image"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_BACKGROUND_LABEL="Background for text"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_COLOR_LABEL="Color for text"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT_LABEL="Custom font file <br/>(in ttf)"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT_SIZE_LABEL="Font size"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_MARGIN_LABEL="Margin"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_IMAGETYPE_GENERATE_BACKGROUND_TEXT_PADDING_LABEL="Padding"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_DEFAULT_DESCRIPTION_LABEL="Default description"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_DEFAULT_DESCRIPTION_DESC="This description will be used if it is empty"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_MENUITEM_FORM_TITLE_LABEL="Title"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_MENUITEM_FORM_DESCRIPTION_LABEL="Description"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_MENUITEM_FORM_TYPE_LABEL="Type"
+PLG_SYSTEM_PHOCA_OPEN_GRAPH_MENUITEM_FORM_IMAGE_LABEL="Image"
+COM_MENUS_PHOCAOPENGRAPH_FIELDSET_LABEL="Open graph"
 ;[3.0.6]
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_ENABLE_ARTICLE_COMPONENT_CATEGORIES_VIEW_LABEL="Enable In Article Component (Categories View)"
 PLG_SYSTEM_PHOCA_OPEN_GRAPH_ENABLE_ARTICLE_COMPONENT_CATEGORIES_VIEW_DESC="Enable or disable this plugin in Article component (com_content) - in Categories view."
